@@ -1,6 +1,7 @@
 * 2005-04-23 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Twiddle rounding in axis.py to try to avoid off-by-one pixel bugs
-
+	- Move distance calculation code into Distance setting
+	
 * 2005-04-22 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Display drop down list of units based on James Graham's patch
 	- Use drop down list of datasets for appropriate settings
